fix: fixing testing issues

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,12 @@ services:
       - DB_SOURCE=postgres://root:secret@postgres:5432/simple_bank?sslmode=disable
     depends_on:
       - postgres
-    entrypoint: [ "./wait-for.sh", "postgres:5432", "--", "/app/start.sh" ]
+    entrypoint:
+      [
+        "/app/wait-for.sh",
+        "postgres:5432",
+        "--",
+        "/app/start.sh"
+      ]
     command: [ "/app/main" ]
 
